--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,12 +45,17 @@
 
     </ListView>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <exercice.matasse.beerhamyde.TextViewCustomer
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        android:text="couille"
-        />
+        android:layout_marginTop="73dp"
+        android:textSize="50dp"
+        android:text="test :"
+        android:textColor="@color/White"
+        android:id="@+id/bddTest"
+        android:layout_below="@+id/editText"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="match_parent"
@@ -63,5 +68,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
 
 </RelativeLayout>
