--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:textSize="30dp"
         android:layout_centerHorizontal="true"
         android:id="@+id/player_list"
-        >
+        android:layout_above="@+id/add_player">
 
 
     </ListView>
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="73dp"
         android:textSize="50dp"
-        android:text="test :"
+        android:text=""
         android:textColor="@color/White"
         android:id="@+id/bddTest"
         android:layout_below="@+id/editText"
@@ -63,7 +63,21 @@
         android:background="@drawable/button_style"
         android:text="@string/add_player"
         style="@style/button_text"
-        android:onClick="chosePlayerLayout"
+
+        android:id="@+id/add_player"
+
+        android:layout_above="@+id/next"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_style"
+        android:text="@string/validate"
+        style="@style/button_text"
+
+        android:id="@+id/next"
 
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
